<resources>
    <string name="app_name">android app</string>
    <string name="login_etPassword">Password</string>
    <string name="username">Username</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="login_btnBack"><![CDATA[>]]></string>
    <string name="login_backButton">backButton</string>
    <string name="Login_sign_up">Sign Up</string>
    <string name="Login_new_to_netflix">New to Netflix?</string>
    <string name="Register_username">UserName</string>
    <string name="Register_password_verification">password verification</string>
    <string name="Register_display_name">display name</string>
    <string name="BaseUrl">http://10.0.2.2:12345/api/</string>
    <string name="Register_register">register</string>
    <string name="movie_year">year</string>
    <string name="movie_title">movie title</string>
    <string name="movie_time">movie time</string>
    <string name="movie_play">Play</string>
    <string name="movie_description">description</string>
    <string name="movie_poster">movie_poster</string>
    <string name="movieposter">moviePoster</string>
    <string name="manager_delete_movie">Delete Movie</string>
    <string name="manager_movie_id">movie id</string>
    <string name="manager_create_movie">Create Movie</string>
    <string name="managerCreate_movie_name">movie name</string>
    <string name="managerCreate_year">Year</string>
    <string name="managerCreate_time">time</string>
    <string name="managerCreate_description">description</string>
    <string name="managercreate_age">managerCreate_age</string>
    <string name="create_category">Create Category</string>
    <string name="category_name_hint">Enter category name</string>
    <string name="is_promoted">Is Promoted?</string>
    <string name="select_movies">Select Movies</string>
    <string name="create_movie">Create Movies</string>
    <string name="choose_pic">Choose Picture</string>
    <string name="choose_video">Choose Video</string>
    <string name="choose_trailer">Choose Trailer</string>
    <string name="categories">Categories↓</string>
    <string name="more_like_this">More Like This</string>
    <string name="trailer">Trailer</string>
    <string name="delete_movie">Delete Movie</string>
    <string name="delete_category">Delete Category</string>
    <string name="get_started">Get Started</string>
    <string name="age">age</string>
    <string name="choose_category">Choose Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="edit_movie">Edit Movie</string>
    <string name="choose_movie">Choose Movie</string>
    <string name="save_change">Save Change</string>
</resources>