<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:fillViewport="true"
    android:id="@+id/editMovieActivity"
    android:scrollbars="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="140dp"
                android:layout_height="52dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/edit_movie"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/movieNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/managerCreate_movie_name"
                android:inputType="textMultiLine"
                android:textColor="#FFFFFF"
                android:textColorHint="#B0B0B0" />

            <EditText
                android:id="@+id/movieTimeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="time"
                android:hint="@string/managerCreate_time"
                android:inputType="textMultiLine"
                android:textColor="#FFFFFF"
                android:textColorHint="#B0B0B0" />

            <EditText
                android:id="@+id/movieYearInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="year"
                android:hint="@string/managerCreate_year"
                android:inputType="textMultiLine"
                android:textColor="#FFFFFF"
                android:textColorHint="#B0B0B0" />

            <EditText
                android:id="@+id/movieDescriptionInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="description"
                android:hint="@string/managerCreate_description"
                android:inputType="textMultiLine"
                android:textColor="#FFFFFF"
                android:textColorHint="#F8F5F5" />

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="267dp"
                android:fillViewport="true">

                <ListView
                    android:id="@+id/categoryListView"
                    android:layout_width="wrap_content"
                    android:layout_height="155dp"
                    android:layout_marginEnd="0dp"
                    android:choiceMode="multipleChoice"
                    android:textColor="#FFFFFF"
                    app:layout_constraintEnd_toEndOf="parent" />
            </ScrollView>

            <Button
                android:id="@+id/btnChooseImage"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="false"
                android:padding="0dp"
                android:text="@string/choose_pic"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageViewProfilePic"
                android:layout_width="106dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp" />

            <Button
                android:id="@+id/btnChooseVideo"
                android:layout_width="124dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="false"
                android:padding="0dp"
                android:text="@string/choose_video"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <VideoView
                android:id="@+id/videoView"
                android:layout_width="104dp"
                android:layout_height="91dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp" />

            <Button
                android:id="@+id/createMovieButton"
                android:layout_width="386dp"
                android:layout_height="49dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="#A91616"
                android:text="@string/save_change"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
