<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    android:fillViewport="true"
    android:id="@+id/createMovie"
    android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="140dp"
                    android:layout_height="52dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:text="@string/create_movie"
                    android:textColor="@color/colorText"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/movieNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:hint="@string/managerCreate_movie_name"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorText" />

                <EditText
                    android:id="@+id/movieTimeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="time"
                    android:hint="@string/managerCreate_time"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorText" />

                <EditText
                    android:id="@+id/movieYearInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="year"
                    android:hint="@string/managerCreate_year"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorText" />

                <EditText
                    android:id="@+id/movieAgeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="age"
                    android:hint="@string/age"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorText" />

                <EditText
                    android:id="@+id/movieDescriptionInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="description"
                    android:hint="@string/managerCreate_description"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorText" />

                <ScrollView
                    android:id="@+id/scrollView"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:fillViewport="true">

                    <ListView
                        android:id="@+id/categoryListView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="0dp"
                        android:choiceMode="multipleChoice"
                        android:nestedScrollingEnabled="true"
                        android:textColor="@color/colorText" />
                    <!--app:layout_constraintEnd_toEndOf="parent" />-->
                </ScrollView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <Button
                        android:id="@+id/btnChooseImage"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="false"
                        android:padding="0dp"
                        android:text="@string/choose_pic"
                        android:textColor="@color/colorText"
                        android:textSize="16sp" />
                    <ImageView
                        android:id="@+id/checkProfilePic"
                        android:layout_width="wrap_content"
                        android:layout_height="34dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_check"
                        android:visibility="invisible"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <Button
                        android:id="@+id/btnChooseVideo"
                        android:layout_width="106dp"
                        android:layout_height="40dp"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="false"
                        android:padding="0dp"
                        android:text="@string/choose_video"
                        android:textColor="@color/colorText"
                        android:textSize="16sp" />
                    <ImageView
                        android:id="@+id/checkVideo"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_check"
                        android:visibility="invisible"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <Button
                        android:id="@+id/btnChooseTrailer"
                        android:layout_width="124dp"
                        android:layout_height="40dp"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="false"
                        android:padding="0dp"
                        android:text="@string/choose_trailer"
                        android:textColor="@color/colorText"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf = "@+id/videoView"/>
                    <ImageView
                        android:id="@+id/checkTrailer"
                        android:layout_width="wrap_content"
                        android:layout_height="34dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_check"
                        android:visibility="invisible"/>
                </LinearLayout>

                <Button
                    android:id="@+id/createMovieButton"
                    android:layout_width="386dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/colorSubmitDarkButton"
                    android:text="@string/manager_create_movie"
                    android:textColor="@color/colorText" />
            </LinearLayout>
        </LinearLayout>

</androidx.core.widget.NestedScrollView>
