<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/UserName"
            android:layout_width="278dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:backgroundTint="#6B6868"
            android:ems="10"
            android:hint="@string/Register_username"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#B0B0B0" />


        <EditText
            android:id="@+id/editPassword"
            android:layout_width="279dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:backgroundTint="#6B6868"
            android:ems="10"
            android:hint="@string/login_etPassword"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#B0B0B0"
            tools:layout_editor_absoluteX="57dp"
            tools:layout_editor_absoluteY="281dp" />


        <EditText
            android:id="@+id/editVerificationPassword"
            android:layout_width="279dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:backgroundTint="#6B6868"
            android:ems="10"
            android:hint="@string/Register_password_verification"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#B0B0B0"
            tools:layout_editor_absoluteX="57dp"
            tools:layout_editor_absoluteY="281dp" />


        <EditText
            android:id="@+id/editDisplayname"
            android:layout_width="279dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:backgroundTint="#6B6868"
            android:ems="10"
            android:hint="@string/Register_display_name"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#B0B0B0"
            tools:layout_editor_absoluteX="57dp"
            tools:layout_editor_absoluteY="281dp" />

        <ImageView
            android:id="@+id/imageViewProfilePic"
            android:layout_width="94dp"
            android:layout_height="89dp"
            android:layout_marginTop="16dp"
            android:contentDescription="Profile Picture"
            android:src="@drawable/userdefult" />

        <Button
            android:id="@+id/btnChooseImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FFFFFF"
            android:text="Choose Picture"
            android:textColor="#090909" />


    </LinearLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#A91616"
        android:text="@string/btn_sign_in"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>