<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:id="@+id/movieNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:hint="@string/managerCreate_movie_name"
                    android:inputType="textMultiLine"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#B0B0B0" />

                <EditText
                    android:id="@+id/movieYearInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="year"
                    android:hint="@string/managerCreate_year"
                    android:inputType="textMultiLine"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#B0B0B0" />

                <EditText
                    android:id="@+id/movieTimeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="time"
                    android:hint="@string/managerCreate_time"
                    android:inputType="textMultiLine"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#B0B0B0" />

                <EditText
                    android:id="@+id/movieDescriptionInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="description"
                    android:hint="@string/managerCreate_description"
                    android:inputType="textMultiLine"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#B0B0B0" />

                <!-- ListView להצגת קטגוריות -->
                <ListView
                    android:id="@+id/categoryListView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:choiceMode="multipleChoice" />

                <Button
                    android:id="@+id/btnChooseImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="false"
                    android:padding="0dp"
                    android:text="Choose Picture"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imageViewProfilePic"
                    android:layout_width="119dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp" />

                <Button
                    android:id="@+id/btnChooseVideo"
                    android:layout_width="124dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="false"
                    android:padding="0dp"
                    android:text="Choose video"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <VideoView
                    android:id="@+id/videoView"
                    android:layout_width="119dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp" />

                <Button
                    android:id="@+id/createMovieButton"
                    android:layout_width="393dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#A91616"
                    android:text="@string/manager_create_movie"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>